# SubSim

./: .gitignore  CMakeLists.txt  README  README.txt  TODO.txt
cmake/: utils.cmake
data/: BRLWorld.xml  SauceWorld.xml  SauceWorld.yaml  SlamWorld.xml  TestWorld.xml  VerySimpleWorld.xml
include/: Common.h  CoordinateSystemAxes.h  IrrMonitor.h  Sub.h  Vector.h
include/Simulator/: Simulator.h
media/export/: pool.x  sub.x
media/src/: pool.blend  sub.blend
playerConfigs/: brl.cfg  sauce.cfg  simple.cfg  slam.cfg
scripts/: subjoy.py
scripts/pyrobot/: Avoid.py  SubSimSimulator  runSubSim
scripts/pyrobot/Brain/: SubBrain.py
scripts/pyrobot/Brain/Maths/: Vector2D.py
scripts/pyrobot/Brain/Steering/: AvoidWall.py  Jiggling.py  SteerToTarget.py  Wander.py  __init__.py
scripts/pyrobot/Robot/: Player6665.py  player.py
src/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  Sub.cpp  main.cpp
src/Common/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  HighPrecisionTime.cpp  HighPrecisionTime.h  MathUtils.cpp  MathUtils.h  Utils.cpp  Utils.h
src/Entities/: Buoy.cpp  Buoy.h  CMakeLists.txt  CircularPool.cpp  CircularPool.h  CoordinateSystemAxes.cpp  CoordinateSystemAxes.h  Entity.cpp  Entity.h  FloorTarget.cpp  FloorTarget.h  Gate.cpp  Gate.h  HarbourFloor.cpp  HarbourFloor.h  Pipe.cpp  Pipe.h  Pool.cpp  Pool.h  Sub.cpp  Sub.h  SurveyWall.cpp  SurveyWall.h  XmlEntityParser.cpp  XmlEntityParser.h  YamlEntityParser.cpp  YamlEntityParser.h
src/PlayerPlugin/: CMakeLists.txt  CameraInterface.cpp  CameraInterface.h  CompassInterface.cpp  CompassInterface.h  DepthSensorInterface.cpp  DepthSensorInterface.h  Position3DInterface.cpp  Position3DInterface.h  PresSensorInterface.cpp  PresSensorInterface.h  SimulationInterface.cpp  SimulationInterface.h  SonarInterface.cpp  SonarInterface.h  SubSimDriver.cpp  SubSimDriver.h  SubSimInterface.cpp  SubSimInterface.h
src/Simulator/: CMakeLists.txt  CameraSceneNodeAnimator.cpp  CameraSceneNodeAnimator.h  Simulator.cpp
unitTests/: CommandLineParserTests.h  MathUtilsTests.h  VectorTests.h
